# peek

./: .gitignore  CLAUDE.md  CREDITS.md  Cargo.toml  README.md  install.sh  justfile
.claude/skills/checkup/: SKILL.md
.github/workflows/: ci.yml  manual.yml  release.yml
docs/: architecture-review.md  architecture.md  checkup-2026-04-08.md  conventions.md  css-info-plan.md  csv-table-plan.md  extract-plan.md  features.md  image-rendering.md  memory-audit.md  planned.md  refactor-types-colocation-plan.md  release.md  review-2026-04-26.md  review-followups.md  stdin-plan.md  svg-anim-perf.md  theme-conversion.md
docs/archived/: stdin-plan.md
examples/: gen_audio_fixture.rs  gen_glyphs.rs  gen_test_image.rs
manual/: book.toml
manual/src/: SUMMARY.md  cli-reference.md  environment.md  installation.md  introduction.md  keyboard-shortcuts.md  operating-modes.md  quick-start.md
manual/src/file-types/: archives.md  audio.md  binary.md  comics.md  csv.md  directories.md  disk-images.md  documents.md  ebooks.md  epub.md  html.md  images.md  index.md  markdown.md  pdf.md  source-code.md  structured-data.md  svg.md
manual/src/viewer/: colors.md  extraction.md  info-screen.md  line-numbers-wrap.md  themes.md
src/: cli.rs  detect.rs  error.rs  help.rs  info.rs  input.rs  main.rs  pager.rs  theme.rs  update.rs
src/archive/: mod.rs  sevenz_listing.rs  tar_listing.rs  zip_listing.rs
src/extract/: extract.rs  mod.rs  write.rs
src/info/: gather.rs  mod.rs  render.rs  time.rs
src/info/gather/: animation.rs  archive.rs  binary.rs  exif.rs  image.rs  mod.rs  structured.rs  svg.rs  tests.rs  text.rs  xmp.rs
src/info/render/: archive.rs  binary.rs  file.rs  image.rs  mod.rs  structured.rs  svg.rs  text.rs
src/input/: compression.rs  detect.rs  lines.rs  mime.rs  mod.rs  source.rs  stdin.rs  stream.rs
src/output/: help.rs  mod.rs  pager.rs  print.rs
src/theme/: color_mode.rs  manager.rs  mod.rs  name.rs  peek_theme.rs  sgr.rs  style_mode.rs
src/types/: mod.rs
src/types/archive/: compose.rs  detect.rs  extract.rs  format.rs  info.rs  mod.rs  mode.rs  reader.rs
src/types/archive/backends/: ar.rs  cpio.rs  mod.rs  sevenz.rs  single_stream.rs  tar.rs  zip.rs
src/types/audio/: compose.rs  detect.rs  extract.rs  format.rs  info.rs  info_gather.rs  info_render.rs  mod.rs  package.rs
src/types/binary/: info.rs  mod.rs
src/types/comic/: compose.rs  detect.rs  format.rs  info.rs  mod.rs
src/types/comic/cbz/: info_gather.rs  info_render.rs  mod.rs  package.rs  read_mode.rs
src/types/csv/: compose.rs  detect.rs  format.rs  info.rs  info_gather.rs  info_render.rs  mod.rs  parse.rs  table_mode.rs
src/types/directory/: compose.rs  extract.rs  info.rs  mod.rs  mode.rs  read.rs
src/types/disk_image/: compose.rs  detect.rs  dmg_trailer.rs  extract.rs  format.rs  info.rs  info_gather.rs  info_render.rs  iso_listing.rs  iso_pvd.rs  mbr.rs  mod.rs
src/types/document/: ast.rs  compose.rs  detect.rs  format.rs  info.rs  info_render.rs  mod.rs  read_mode.rs  render.rs
src/types/document/docx/: info_gather.rs  mod.rs  package.rs  read_mode.rs  render.rs
src/types/document/odt/: info_gather.rs  mod.rs  package.rs
src/types/document/rtf/: extract.rs  info_gather.rs  mod.rs  parse.rs  read_mode.rs  render.rs
src/types/ebook/: compose.rs  detect.rs  format.rs  info.rs  mod.rs
src/types/ebook/epub/: info_gather.rs  info_render.rs  mod.rs  package.rs  read_mode.rs
src/types/epub/: info_gather.rs  info_render.rs  mod.rs  package.rs  read_mode.rs
src/types/html/: compose.rs  mod.rs  mode.rs  render.rs
src/types/image/: animation_mode.rs  animation_stats.rs  compose.rs  extract.rs  info.rs  info_gather.rs  info_render.rs  mod.rs  mode.rs  scroll.rs
src/types/image/pipeline/: animate.rs  mod.rs  (+2 more)
src/types/listing/: build.rs  mod.rs  mode.rs  viewport.rs
src/types/markdown/: info.rs  info_gather.rs  info_render.rs  mod.rs
src/types/pdf/: compose.rs  extract.rs  info.rs  info_gather.rs  info_render.rs  mod.rs  package.rs  page_mode.rs  text_mode.rs
src/types/sql/: info.rs  info_gather.rs  info_render.rs  mod.rs
src/types/structured/: detect.rs  format.rs  info.rs  mod.rs  pretty.rs
src/types/svg/: animation_mode.rs  compose.rs  extract.rs  info.rs  info_gather.rs  info_render.rs  mod.rs
src/types/text/: info.rs  info_gather.rs  info_render.rs  mod.rs
src/viewer/: cell_size.rs  hex.rs  image.rs  interactive.rs  mod.rs  paged.rs  search.rs  structured.rs  syntax.rs  text.rs  ui.rs
src/viewer/image/: animate.rs  block_color.rs  clustering.rs  contour.rs  density.rs  glyph_atlas.rs  glyph_atlas_data.rs  interactive.rs  mod.rs  mode.rs  render.rs  svg.rs  svg_anim.rs  tests.rs  viewer.rs
src/viewer/listing/: build.rs  entry.rs  mod.rs  mode.rs  stats.rs  viewport.rs
src/viewer/modes/: about.rs  animation.rs  archive.rs  content.rs  help.rs  hex.rs  image_render.rs  info.rs  mod.rs  svg_animation.rs
src/viewer/ui/: help.rs  keys.rs  mod.rs  prompt.rs  screen.rs  state.rs
test-audio/: bee-buzzing.opus  lijepa-nasa-domovino.mid  sally-mann-vmfa.flac
test-books/: frankenstein-images.epub  frankenstein.doc  frankenstein.docx  frankenstein.epub  frankenstein.html  frankenstein.mobi  frankenstein.odt  frankenstein.rtf  sample-pages.cbz
test-data/: HttpServer.java  archive.7z  archive.cpio  archive.tar  archive.tar.bz2  archive.tar.lz4  archive.tar.xz  archive.tar.zst  article.html  books.csv  bookstore.xml  config.json  config.json5  dashboard.html  employees.csv  euro-prices.csv  event-bus.ts  events.jsonl  feed.xml  fibonacci.py  formatted.html  hello.deb  kitchen-sink.html  long-lines.json  long-lines.txt  long-lines.xml  measurements.tsv  orders.sql  project.toml  release-notes.md  sample.docx  sample.iso  sample.odt  sample.rtf  sensor-log.csv  servers.yaml  settings.jsonc  single.bz2  single.lz4  single.xz  (+5 more)
test-images/: ATTRIBUTION.md  tropical-jungle.ai  tropical-jungle.eps
themes/: dark-2026.tmTheme  idea-dark.tmTheme  islands-dark.tmTheme  vivid-dark.tmTheme  vscode-dark-2026.tmTheme  vscode-dark-modern.tmTheme  vscode-monokai.tmTheme
(+23 files in other folders)
