[package]
name = "peek"
version = "0.1.5"
edition = "2024"
authors = ["Tuukka Haapasalo <tuukka.haapasalo@gmail.com>"]
description = "A modern file viewer with syntax highlighting, pretty-printing, and image rendering"
license = "MIT"
repository = "https://github.com/thaapasa/peek"
homepage = "https://github.com/thaapasa/peek"

[dependencies]
# CLI framework with derive macros for self-documenting commands
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Terminal handling and colors
crossterm = "0.29"

# Syntax highlighting
syntect = "5"
two-face = "0.5.1"

# File type detection via magic bytes
infer = "0.19"

# Extension-based MIME lookup (covers source-code conventional types)
mime_guess = "2"

# Structured data parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json5 = "0.4"
toml = { version = "1.1.2", features = ["preserve_order"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }

# Image handling
image = "0.25"

# SVG rasterization
resvg = "0.47"

# EXIF metadata extraction
kamadak-exif = "0.6.1"

# Error handling
anyhow = "1"
unicode-width = "0.2.2"
gif = "0.14"

# Archive listing (TOC viewer). Listing-only paths read just the entry
# headers — no payload decompression — so multi-GB archives list cheaply.
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
bzip2-rs = "0.1"
lzma-rs = "0.3"
zstd = "0.13"
sevenz-rust2 = { version = "0.18", default-features = false }

# /dev/tty reopen after consuming piped stdin (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Font rasterization for glyph atlas generation
fontdue = "0.9"

# Snapshot testing for image rendering output
insta = "1"

# Optimize image processing dependencies even in dev builds —
# these are unusably slow without at least -O2
[profile.dev.package.image]
opt-level = 2
[profile.dev.package.zune-inflate]
opt-level = 2
[profile.dev.package.zune-jpeg]
opt-level = 2
[profile.dev.package.png]
opt-level = 2
[profile.dev.package.color_quant]
opt-level = 2
[profile.dev.package.resvg]
opt-level = 2
[profile.dev.package.tiny-skia]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
strip = true
