[package]
name = "peek"
version = "0.1.10"
edition = "2024"
authors = ["Tuukka Haapasalo <tuukka.haapasalo@gmail.com>"]
description = "A modern file viewer with syntax highlighting, pretty-printing, and image rendering"
license = "MIT"
repository = "https://github.com/thaapasa/peek"
homepage = "https://github.com/thaapasa/peek"

[dependencies]
# CLI framework with derive macros for self-documenting commands
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Terminal handling and colors
crossterm = "0.29"

# Syntax highlighting
syntect = "5"
two-face = "0.5.1"

# File type detection via magic bytes
infer = "0.19"

# Extension-based MIME lookup (covers source-code conventional types)
mime_guess = "2"

# Structured data parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json5 = "1"
toml = { version = "1.1.2", features = ["preserve_order"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }

# Image handling
image = "0.25"

# SVG rasterization
resvg = "0.47"

# EXIF metadata extraction
kamadak-exif = "0.6.1"

# Error handling
anyhow = "1"
unicode-width = "0.2.2"
gif = "0.14"

# Cheap-clone byte buffers shared between in-memory InputSource variants and
# extract results — `Bytes::slice` is a refcount bump, not a copy.
bytes = "1"

# Archive listing (TOC viewer). Listing-only paths read just the entry
# headers — no payload decompression — so multi-GB archives list cheaply.
zip = { version = "8", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
bzip2 = "0.6"
lzma-rs = "0.3"
zstd = "0.13"
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
sevenz-rust2 = { version = "0.21", default-features = false }
html2text = { version = "0.17", features = ["css", "css_ext"] }

# Rich Text Format parser. Small lexer/parser; covers the common Word-export
# subset (control words, groups, runs).
rtf-parser = "0.4.2"

# PDF rendering + text + attachments. Wraps Google's Pdfium (C++) via dlopen
# at process start. The libpdfium.dylib / .so / .dll is shipped alongside
# the peek binary in the release tarball (release.yml grabs it per-target
# from bblanchon/pdfium-binaries) — no system install needed at runtime.
# Dev workflow: `.pdfium/lib/libpdfium.*` is searched as a fallback.
pdfium-render = "0.9"

# DOCX is parsed via a hand-rolled `quick_xml` walker (existing dep) over
# `word/document.xml` — full WordprocessingML deserializers (`docx-rust`,
# `docx-rs`) reject real-world Word documents because numeric attributes
# routinely carry non-numeric values like "auto" / "none".

# /dev/tty reopen after consuming piped stdin (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Font rasterization for glyph atlas generation
fontdue = "0.9"

# Snapshot testing for image rendering output
insta = "1"

# Optimize image processing dependencies even in dev builds —
# these are unusably slow without at least -O2
[profile.dev.package.image]
opt-level = 2
[profile.dev.package.zune-inflate]
opt-level = 2
[profile.dev.package.zune-jpeg]
opt-level = 2
[profile.dev.package.png]
opt-level = 2
[profile.dev.package.color_quant]
opt-level = 2
[profile.dev.package.resvg]
opt-level = 2
[profile.dev.package.tiny-skia]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
strip = true
